command refactor added error-on-excess-args option in config.yml added new message key errors.too-many-arguments