@@ -11,6 +11,7 @@ import org.bukkit.command.TabExecutor;
 import org.bukkit.entity.Player;
 import org.jetbrains.annotations.NotNull;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -34,36 +35,53 @@ public final class AfkCommand implements TabExecutor {
         }
 
         if (!player.hasPermission("aircore.command.afk")) {
-            MessageUtil.send(player, "errors.no-permission",
-                    Map.of("permission", "aircore.command.afk"));
+            MessageUtil.send(player, "errors.no-permission", Map.of("permission", "aircore.command.afk"));
+            return true;
+        }
+
+        if (plugin.config().errorOnExcessArgs() && args.length > 0) {
+            MessageUtil.send(player, "errors.too-many-arguments", Map.of("usage", plugin.config().getUsage("afk", label)));
+            return true;
+        }
+
+        if (manager.afk().wasRecentlyCleared(player.getUniqueId())) {
             return true;
         }
 
         if (manager.afk().isAfk(player.getUniqueId())) {
-            long elapsed = manager.afk().clearAfk(player.getUniqueId());
-            String timeStr = TimeUtil.formatSeconds(plugin, elapsed);
-
-            MessageUtil.send(player, "utilities.afk.stop", Map.of("time", timeStr));
-
-            for (Player other : Bukkit.getOnlinePlayers()) {
-                if (!other.equals(player) && other.hasPermission("aircore.command.afk.notify")) {
-                    MessageUtil.send(other, "utilities.afk.stop-notify",
-                            Map.of("player", player.getName(), "time", timeStr));
-                }
-            }
+            stopAfk(player);
         } else {
-            manager.afk().setAfk(player.getUniqueId());
-            MessageUtil.send(player, "utilities.afk.set", Map.of());
-
-            for (Player other : Bukkit.getOnlinePlayers()) {
-                if (!other.equals(player) && other.hasPermission("aircore.command.afk.notify")) {
-                    MessageUtil.send(other, "utilities.afk.set-notify",
-                            Map.of("player", player.getName()));
-                }
-            }
+            startAfk(player);
         }
 
         return true;
+    }
+
+    private void startAfk(Player player) {
+        manager.afk().setAfk(player.getUniqueId());
+        MessageUtil.send(player, "utilities.afk.set", Map.of());
+
+        for (Player other : Bukkit.getOnlinePlayers()) {
+            if (other.equals(player)) continue;
+            if (other.hasPermission("aircore.command.afk.notify")) {
+                MessageUtil.send(other, "utilities.afk.set-notify", Map.of("player", player.getName()));
+            }
+        }
+    }
+
+    private void stopAfk(Player player) {
+        long elapsed = manager.afk().clearAfk(player.getUniqueId());
+        String timeStr = TimeUtil.formatSeconds(plugin, elapsed);
+
+        MessageUtil.send(player, "utilities.afk.stop", Map.of("time", timeStr));
+
+        for (Player other : Bukkit.getOnlinePlayers()) {
+            if (other.equals(player)) continue;
+            if (other.hasPermission("aircore.command.afk.notify")) {
+                MessageUtil.send(other, "utilities.afk.stop-notify",
+                        Map.of("player", player.getName(), "time", timeStr));
+            }
+        }
     }
 
     @Override
@@ -71,6 +89,6 @@ public final class AfkCommand implements TabExecutor {
                                       @NotNull Command cmd,
                                       @NotNull String label,
                                       String @NotNull [] args) {
-        return List.of();
+        return Collections.emptyList();
     }
 }
