@@ -10,6 +10,7 @@ import org.bukkit.command.TabExecutor;
 import org.bukkit.entity.Player;
 import org.jetbrains.annotations.NotNull;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -27,58 +28,66 @@ public final class BackCommand implements TabExecutor {
                              String @NotNull [] args) {
 
         if (!(sender instanceof Player player)) {
-            String consoleName = plugin.lang().get("general.console-name");
-
-            if (args.length < 1) {
-                sender.sendMessage("Usage: /" + label + " <player> [-countdown]");
-                return true;
-            }
-
-            Player target = Bukkit.getPlayerExact(args[0]);
-            if (target == null) {
-                sender.sendMessage("Player not found.");
-                return true;
-            }
-
-            Location deathLoc = plugin.utility().back().getLastDeath(target.getUniqueId());
-            if (deathLoc == null) {
-                sender.sendMessage(target.getName() + " has no previous death location.");
-                return true;
-            }
-
-            boolean useCountdown = args.length > 1 && args[1].equalsIgnoreCase("-countdown");
-
-            if (useCountdown) {
-                plugin.core().teleports().startCountdown(
-                        target,
-                        target,
-                        () -> {
-                            plugin.core().teleports().teleport(target, deathLoc);
-                            plugin.utility().back().clearLastDeath(target.getUniqueId());
-                            MessageUtil.send(target, "utilities.back.success-by", Map.of("player", consoleName));
-                        },
-                        cancelReason -> MessageUtil.send(target, "utilities.back.cancelled", Map.of())
-                );
-                sender.sendMessage("Countdown started for " + target.getName() + " to teleport to last death location.");
-            } else {
-                plugin.core().teleports().teleport(target, deathLoc);
-                plugin.utility().back().clearLastDeath(target.getUniqueId());
-
-                sender.sendMessage("Teleported " + target.getName() + " to their last death location.");
-                if (plugin.config().consoleToPlayerFeedback()) {
-                    MessageUtil.send(target, "utilities.back.success-by", Map.of("player", consoleName));
-                }
-            }
+            handleConsole(sender, label, args);
             return true;
         }
 
         if (!player.hasPermission("aircore.command.back")) {
-            MessageUtil.send(player, "errors.no-permission",
-                    Map.of("permission", "aircore.command.back"));
+            MessageUtil.send(player, "errors.no-permission", Map.of("permission", "aircore.command.back"));
+            return true;
+        }
+
+        if (plugin.config().errorOnExcessArgs() && args.length > 0) {
+            MessageUtil.send(player, "errors.too-many-arguments",
+                    Map.of("usage", plugin.config().getUsage("back", label)));
             return true;
         }
 
         return teleportSelf(player);
+    }
+
+    private void handleConsole(CommandSender sender, String label, String[] args) {
+        if (args.length < 1) {
+            sender.sendMessage("Usage: /" + label + " <player> [-countdown]");
+            return;
+        }
+
+        Player target = Bukkit.getPlayerExact(args[0]);
+        if (target == null) {
+            sender.sendMessage("Player not found.");
+            return;
+        }
+
+        Location deathLoc = plugin.utility().back().getLastDeath(target.getUniqueId());
+        if (deathLoc == null) {
+            sender.sendMessage(target.getName() + " has no previous death location.");
+            return;
+        }
+
+        final String consoleName = plugin.lang().get("general.console-name");
+        boolean useCountdown = args.length > 1 && args[1].equalsIgnoreCase("-countdown");
+
+        if (useCountdown) {
+            plugin.core().teleports().startCountdown(
+                    target,
+                    target,
+                    () -> {
+                        plugin.core().teleports().teleport(target, deathLoc);
+                        plugin.utility().back().clearLastDeath(target.getUniqueId());
+                        MessageUtil.send(target, "utilities.back.success-by", Map.of("player", consoleName));
+                    },
+                    cancelReason -> MessageUtil.send(target, "utilities.back.cancelled", Map.of())
+            );
+            sender.sendMessage("Countdown started for " + target.getName() + " to teleport to last death location.");
+        } else {
+            plugin.core().teleports().teleport(target, deathLoc);
+            plugin.utility().back().clearLastDeath(target.getUniqueId());
+
+            sender.sendMessage("Teleported " + target.getName() + " to their last death location.");
+            if (plugin.config().consoleToPlayerFeedback()) {
+                MessageUtil.send(target, "utilities.back.success-by", Map.of("player", consoleName));
+            }
+        }
     }
 
     private boolean teleportSelf(Player player) {
@@ -94,7 +103,6 @@ public final class BackCommand implements TabExecutor {
                 () -> {
                     plugin.core().teleports().teleport(player, deathLoc);
                     plugin.utility().back().clearLastDeath(player.getUniqueId());
-
                     MessageUtil.send(player, "utilities.back.success", Map.of());
                 },
                 cancelReason -> MessageUtil.send(player, "utilities.back.cancelled", Map.of())
@@ -110,7 +118,7 @@ public final class BackCommand implements TabExecutor {
                                       String @NotNull [] args) {
 
         if (sender instanceof Player) {
-            return List.of();
+            return Collections.emptyList();
         }
 
         if (args.length == 1) {
@@ -122,12 +130,10 @@ public final class BackCommand implements TabExecutor {
                     .toList();
         }
 
-        if (args.length == 2) {
-            if ("-countdown".startsWith(args[1].toLowerCase())) {
-                return List.of("-countdown");
-            }
+        if (args.length == 2 && "-countdown".startsWith(args[1].toLowerCase())) {
+            return List.of("-countdown");
         }
 
-        return List.of();
+        return Collections.emptyList();
     }
 }
