@@ -11,11 +11,13 @@ import org.bukkit.command.TabExecutor;
 import org.bukkit.entity.Player;
 import org.jetbrains.annotations.NotNull;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
 
 public final class EnderchestCommand implements TabExecutor {
+
     private final AirCore plugin;
     private final GuiManager guiManager;
 
@@ -29,52 +31,71 @@ public final class EnderchestCommand implements TabExecutor {
                              @NotNull Command cmd,
                              @NotNull String label,
                              String @NotNull [] args) {
+
         if (!(sender instanceof Player player)) {
             sender.sendMessage("Only players may use this command");
             return true;
         }
 
         if (!player.hasPermission("aircore.command.enderchest")) {
-            MessageUtil.send(player, "errors.no-permission",
-                    Map.of("permission", "aircore.command.enderchest"));
+            MessageUtil.send(player, "errors.no-permission", Map.of("permission", "aircore.command.enderchest"));
             return true;
         }
 
-        String targetName;
-
-        if (args.length < 1) {
-            targetName = player.getName();
-        } else {
-            if (!player.hasPermission("aircore.command.enderchest.others")) {
-                MessageUtil.send(player, "errors.no-permission",
-                        Map.of("permission", "aircore.command.enderchest.others"));
-                return true;
-            }
-
-            OfflinePlayer target = resolve(player, args[0]);
-            if (target == null) return true;
-
-            if (target.getUniqueId().equals(player.getUniqueId())) {
-                targetName = player.getName();
-            } else {
-                targetName = target.getName() != null ? target.getName() : args[0];
-            }
+        if (args.length == 0) {
+            openOwnEnderchest(player);
+            return true;
         }
 
-        final String finalTargetName = targetName;
-
-        if (targetName.equalsIgnoreCase(player.getName())) {
-            plugin.scheduler().runEntityTask(player, () ->
-                    player.openInventory(guiManager.getEnderchestManager().buildOwn(player))
-            );
-        } else {
-            plugin.scheduler().runEntityTask(player, () ->
-                    guiManager.openGui("enderchest", player,
-                            Map.of("player", player.getName(), "target", finalTargetName))
-            );
+        boolean hasOthers = player.hasPermission("aircore.command.enderchest.others");
+        if (!hasOthers) {
+            MessageUtil.send(player, "errors.no-permission", Map.of("permission", "aircore.command.enderchest.others"));
+            return true;
         }
 
+        if (plugin.config().errorOnExcessArgs() && args.length > 1) {
+            MessageUtil.send(player, "errors.too-many-arguments",
+                    Map.of("usage", plugin.config().getUsage("enderchest", "others", label)));
+            return true;
+        }
+
+        String targetName = args[0];
+        handleOthers(player, targetName);
         return true;
+    }
+
+    private void openOwnEnderchest(Player player) {
+        plugin.scheduler().runEntityTask(player, () ->
+                player.openInventory(guiManager.getEnderchestManager().buildOwn(player))
+        );
+    }
+
+    private void handleOthers(Player player, String targetName) {
+        OfflinePlayer resolved = resolve(player, targetName);
+        if (resolved == null) return;
+
+        String finalTargetName = resolved.getName() != null ? resolved.getName() : targetName;
+
+        if (resolved.getUniqueId().equals(player.getUniqueId())) {
+            openOwnEnderchest(player);
+            return;
+        }
+
+        plugin.scheduler().runEntityTask(player, () ->
+                guiManager.openGui("enderchest", player,
+                        Map.of("player", player.getName(), "target", finalTargetName))
+        );
+    }
+
+    private OfflinePlayer resolve(Player player, String name) {
+        Player online = Bukkit.getPlayerExact(name);
+        if (online != null) return online;
+
+        UUID cached = plugin.getNameCache().get(name.toLowerCase());
+        if (cached != null) return Bukkit.getOfflinePlayer(cached);
+
+        MessageUtil.send(player, "errors.player-never-joined", Map.of());
+        return null;
     }
 
     @Override
@@ -82,13 +103,12 @@ public final class EnderchestCommand implements TabExecutor {
                                       @NotNull Command cmd,
                                       @NotNull String label,
                                       String @NotNull [] args) {
-        if (!(sender instanceof Player player)) return List.of();
+        if (args.length != 1 || !(sender instanceof Player player)) return Collections.emptyList();
 
-        if (!player.hasPermission("aircore.command.enderchest")) return List.of();
-
-        if (args.length != 1) return List.of();
-
-        if (!player.hasPermission("aircore.command.enderchest.others")) return List.of();
+        if (!player.hasPermission("aircore.command.enderchest") ||
+                !player.hasPermission("aircore.command.enderchest.others")) {
+            return Collections.emptyList();
+        }
 
         String input = args[0].toLowerCase();
         return Bukkit.getOnlinePlayers().stream()
@@ -96,21 +116,5 @@ public final class EnderchestCommand implements TabExecutor {
                 .filter(name -> name.toLowerCase().startsWith(input))
                 .limit(20)
                 .toList();
-    }
-
-    private OfflinePlayer resolve(Player player, String name) {
-        for (Player online : Bukkit.getOnlinePlayers()) {
-            if (online.getName().equalsIgnoreCase(name)) {
-                return online;
-            }
-        }
-
-        UUID cached = plugin.getNameCache().get(name.toLowerCase());
-        if (cached != null) {
-            return Bukkit.getOfflinePlayer(cached);
-        }
-
-        MessageUtil.send(player, "errors.player-never-joined", Map.of("player", name));
-        return null;
     }
 }
