@@ -10,7 +10,7 @@ import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.meta.Damageable;
 import org.jetbrains.annotations.NotNull;
 
-import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -29,7 +29,7 @@ public final class RepairCommand implements TabExecutor {
                              String @NotNull [] args) {
 
         if (!(sender instanceof Player player)) {
-            sender.sendMessage("Only players may use this command.");
+            sender.sendMessage("Only players may use this command");
             return true;
         }
 
@@ -39,38 +39,55 @@ public final class RepairCommand implements TabExecutor {
             return true;
         }
 
-        // /repair all
-        if (args.length == 1 && args[0].equalsIgnoreCase("all")) {
-            if (!player.hasPermission("aircore.command.repair.all")) {
-                MessageUtil.send(player, "errors.no-permission",
-                        Map.of("permission", "aircore.command.repair.all"));
+        boolean hasAll = player.hasPermission("aircore.command.repair.all");
+
+        if (args.length > 0) {
+            if (args[0].equalsIgnoreCase("all")) {
+                if (!hasAll) {
+                    MessageUtil.send(player, "errors.no-permission",
+                            Map.of("permission", "aircore.command.repair.all"));
+                    return true;
+                }
+
+                if (plugin.config().errorOnExcessArgs() && args.length > 1) {
+                    MessageUtil.send(player, "errors.too-many-arguments",
+                            Map.of("usage", plugin.config().getUsage("repair", "all", label)));
+                    return true;
+                }
+
+                plugin.scheduler().runEntityTask(player, () -> {
+                    boolean repairedAny = false;
+                    for (ItemStack item : player.getInventory().getContents()) {
+                        if (item == null || item.getType().isAir()) continue;
+                        if (item.getType().getMaxDurability() <= 0) continue;
+                        if (!(item.getItemMeta() instanceof Damageable damageable)) continue;
+
+                        if (damageable.getDamage() > 0) {
+                            damageable.setDamage(0);
+                            item.setItemMeta(damageable);
+                            repairedAny = true;
+                        }
+                    }
+
+                    if (repairedAny) {
+                        MessageUtil.send(player, "utilities.repair.inventory", Map.of());
+                    } else {
+                        MessageUtil.send(player, "utilities.repair.inventory-not-damaged", Map.of());
+                    }
+                });
                 return true;
             }
 
-            plugin.scheduler().runEntityTask(player, () -> {
-                boolean repairedAny = false;
-                for (ItemStack item : player.getInventory().getContents()) {
-                    if (item == null || item.getType().isAir()) continue;
-                    if (item.getType().getMaxDurability() <= 0) continue;
-                    if (!(item.getItemMeta() instanceof Damageable damageable)) continue;
+            if (plugin.config().errorOnExcessArgs()) {
+                String usage = hasAll
+                        ? plugin.config().getUsage("repair", "all", label)
+                        : plugin.config().getUsage("repair", label);
 
-                    if (damageable.getDamage() > 0) {
-                        damageable.setDamage(0);
-                        item.setItemMeta(damageable);
-                        repairedAny = true;
-                    }
-                }
-
-                if (repairedAny) {
-                    MessageUtil.send(player, "utilities.repair.inventory", Map.of());
-                } else {
-                    MessageUtil.send(player, "utilities.repair.inventory-not-damaged", Map.of());
-                }
-            });
-            return true;
+                MessageUtil.send(player, "errors.too-many-arguments", Map.of("usage", usage));
+                return true;
+            }
         }
 
-        // /repair (single item in hand)
         plugin.scheduler().runEntityTask(player, () -> {
             ItemStack item = player.getInventory().getItemInMainHand();
             if (item.getType().isAir()) {
@@ -78,18 +95,12 @@ public final class RepairCommand implements TabExecutor {
                 return;
             }
 
-            if (item.getType().getMaxDurability() <= 0) {
+            if (item.getType().getMaxDurability() <= 0 || !(item.getItemMeta() instanceof Damageable damageable)) {
                 MessageUtil.send(player, "utilities.repair.cannot-repair", Map.of());
                 return;
             }
 
-            if (!(item.getItemMeta() instanceof Damageable damageable)) {
-                MessageUtil.send(player, "utilities.repair.cannot-repair", Map.of());
-                return;
-            }
-
-            int currentDamage = damageable.getDamage();
-            if (currentDamage > 0) {
+            if (damageable.getDamage() > 0) {
                 damageable.setDamage(0);
                 item.setItemMeta(damageable);
                 MessageUtil.send(player, "utilities.repair.item", Map.of());
@@ -108,13 +119,12 @@ public final class RepairCommand implements TabExecutor {
                                       String @NotNull [] args) {
         if (args.length == 1 && sender instanceof Player player) {
             if (player.hasPermission("aircore.command.repair.all")) {
-                List<String> suggestions = new ArrayList<>();
-                if ("all".startsWith(args[0].toLowerCase())) {
-                    suggestions.add("all");
+                String input = args[0].toLowerCase();
+                if ("all".startsWith(input)) {
+                    return List.of("all");
                 }
-                return suggestions;
             }
         }
-        return List.of();
+        return Collections.emptyList();
     }
 }
