@@ -1,5 +1,6 @@
 package com.ftxeven.aircore.core.utility.command;
 
+import com.ftxeven.aircore.AirCore;
 import com.ftxeven.aircore.core.utility.UtilityManager;
 import com.ftxeven.aircore.util.MessageUtil;
 import org.bukkit.command.Command;
@@ -8,14 +9,17 @@ import org.bukkit.command.TabExecutor;
 import org.bukkit.entity.Player;
 import org.jetbrains.annotations.NotNull;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
 public final class SetSpawnCommand implements TabExecutor {
 
+    private final AirCore plugin;
     private final UtilityManager manager;
 
-    public SetSpawnCommand(UtilityManager manager) {
+    public SetSpawnCommand(AirCore plugin, UtilityManager manager) {
+        this.plugin = plugin;
         this.manager = manager;
     }
 
@@ -36,6 +40,12 @@ public final class SetSpawnCommand implements TabExecutor {
             return true;
         }
 
+        if (plugin.config().errorOnExcessArgs() && args.length > 0) {
+            MessageUtil.send(player, "errors.too-many-arguments",
+                    Map.of("usage", plugin.config().getUsage("setspawn", label)));
+            return true;
+        }
+
         manager.spawn().saveSpawn(player.getLocation());
         MessageUtil.send(player, "utilities.spawn.set", Map.of());
         return true;
@@ -46,6 +56,6 @@ public final class SetSpawnCommand implements TabExecutor {
                                       @NotNull Command cmd,
                                       @NotNull String label,
                                       String @NotNull [] args) {
-        return List.of();
+        return Collections.emptyList();
     }
 }
